syntax = "proto3";

package services.auth;
option go_package = "github.com/koor-tech/data-control-center/gen/go/api/services/auth;auth";

import "api/resources/timestamp/timestamp.proto";
import "validate/validate.proto";

message LoginRequest {
  string username = 1 [(validate.rules).string = {
    min_len: 3,
    max_len: 24,
    pattern: "^[a-zA-Z0-9-_]+$",
  }];
  string password = 2 [(validate.rules).string = {min_len: 6, max_bytes: 70}];
}

message LoginResponse {
  string token = 1;
  resources.timestamp.Timestamp expires = 2;
  uint64 account_id = 3;
}

message LogoutRequest {}

message LogoutResponse {
  bool success = 1;
}

message CheckTokenRequest {
  string token = 1;
}

message CheckTokenResponse {
  bool success = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc CheckToken(CheckTokenRequest) returns (CheckTokenResponse);
}
